# scyllaft-orm

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/workflows/: pages.yaml  release.yaml
columns/: index.html
docs/: columns.md  index.md  queries.md  tables.md
queries/: index.html
scylla_bridge/: __init__.py  metadata.py  table.py
scyllaft_orm/: __init__.py  metadata.py  query.py  query_builder.py  table.py
search/: search_index.json
tables/: index.html
