[tool.poetry]
name = "scyllaft-orm"
version = "0.1.0"
description = "An ORM for scylladb"
authors = ["Fentech <diviyan@fentech.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scyllaft = "^1.6.3"
pydantic = "^2.9.2"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
